--- a/app/src/main/res/layout-small/activity_data_screen.xml
+++ b/app/src/main/res/layout-small/activity_data_screen.xml
@@ -1,187 +1,194 @@
-<androidx.appcompat.widget.LinearLayoutCompat
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/grey"
-    tools:context=".DataScreen">
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/rectangle"
-        android:layout_width="425dp"
-        android:layout_height="96dp"
-        style="@style/logo"
-        android:layout_gravity="center_horizontal"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/aluga_armar"
-        android:textAlignment="center"
-        android:textColor="@color/grey"
-        android:textSize="20sp"
-        android:fontFamily="@font/kronaone_regular"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="-50dp"
-        android:layout_marginStart="15dp"/>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_voltar"
-        style="@style/button_voltar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="-45dp"
-        android:drawableStart="@drawable/baseline_arrow_back_ios_new_24"
-        android:paddingStart="3dp"
-        android:paddingEnd="3dp"
-        tools:ignore="SpeakableTextPresentCheck"
-        android:layout_marginStart="20dp"/>
+    android:layout_height="match_parent">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="30dp">
+        android:background="@color/grey"
+        tools:context=".DataScreen">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/rectangle"
+            android:layout_width="425dp"
+            android:layout_height="96dp"
+            style="@style/logo"
+
+            android:layout_gravity="center_horizontal"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/prox"
+            android:text="@string/aluga_armar"
+            android:textAlignment="center"
+            android:textColor="@color/grey"
+            android:textSize="16sp"
             android:fontFamily="@font/kronaone_regular"
-            android:textSize="18sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="-55dp"
+            android:layout_marginStart="15dp"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_voltar"
+            style="@style/button_voltar"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="-37dp"
+            android:drawableStart="@drawable/baseline_arrow_back_ios_new_24"
+            android:paddingStart="0dp"
+            android:paddingEnd="3dp"
+            tools:ignore="SpeakableTextPresentCheck"
+            android:layout_marginStart="20dp"/>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="30dp">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/prox"
+                android:fontFamily="@font/kronaone_regular"
+                android:textSize="14sp"
+                android:textAlignment="center"
+                android:textColor="@color/dark_blue"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="10dp"/>
+
+            <RadioGroup
+                android:id="@+id/radioGroup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.appcompat.widget.AppCompatRadioButton
+                    android:id="@+id/radiobutton1"
+                    android:layout_width="315dp"
+                    android:layout_height="48dp"
+                    style="@style/login_button"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginBottom="10dp"
+                    android:textAlignment="center"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/kronaone_regular"
+                    android:buttonTint="@color/grey"/>
+
+                <androidx.appcompat.widget.AppCompatRadioButton
+                    android:id="@+id/radiobutton2"
+                    android:layout_width="315dp"
+                    android:layout_height="48dp"
+                    style="@style/login_button"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginBottom="10dp"
+                    android:textAlignment="center"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/kronaone_regular"
+                    android:buttonTint="@color/grey"/>
+
+                <androidx.appcompat.widget.AppCompatRadioButton
+                    android:id="@+id/radiobutton3"
+                    android:layout_width="315dp"
+                    android:layout_height="48dp"
+                    style="@style/login_button"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginBottom="10dp"
+                    android:textAlignment="center"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/kronaone_regular"
+                    android:buttonTint="@color/grey"/>
+
+                <androidx.appcompat.widget.AppCompatRadioButton
+                    android:id="@+id/radiobutton4"
+                    android:layout_width="315dp"
+                    android:layout_height="48dp"
+                    style="@style/login_button"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginBottom="10dp"
+                    android:textAlignment="center"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/kronaone_regular"
+                    android:buttonTint="@color/grey"/>
+
+                <androidx.appcompat.widget.AppCompatRadioButton
+                    android:id="@+id/radiobutton5"
+                    android:layout_width="315dp"
+                    android:layout_height="48dp"
+                    style="@style/login_button"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginBottom="10dp"
+                    android:textAlignment="center"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/kronaone_regular"
+                    android:buttonTint="@color/grey"/>
+
+            </RadioGroup>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:text="@string/avisoarmario"
+            android:textSize="12sp"
+            android:fontFamily="@font/jurabold"
             android:textAlignment="center"
             android:textColor="@color/dark_blue"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginTop="0dp" />
 
-        <RadioGroup
-            android:id="@+id/radioGroup"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/marker_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:textColor="@color/dark_blue"
+            android:textSize="18sp"
+            android:fontFamily="@font/kronaone_regular"
+            android:layout_marginTop="2dp"/>
 
-            <androidx.appcompat.widget.AppCompatRadioButton
-                android:id="@+id/radiobutton1"
-                android:layout_width="340dp"
-                android:layout_height="49dp"
-                style="@style/login_button"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="35dp"
-                android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:textSize="16sp"
-                android:fontFamily="@font/kronaone_regular"
-                android:buttonTint="@color/grey"/>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/marker_reference"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/dark_blue"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:fontFamily="@font/jurabold"
+            android:layout_marginTop="2dp"/>
 
-            <androidx.appcompat.widget.AppCompatRadioButton
-                android:id="@+id/radiobutton2"
-                android:layout_width="340dp"
-                android:layout_height="49dp"
-                style="@style/login_button"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="35dp"
-                android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:textSize="16sp"
-                android:fontFamily="@font/kronaone_regular"
-                android:buttonTint="@color/grey"/>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/marker_disponibility"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/dark_blue"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:fontFamily="@font/jurabold"
+            android:layout_marginTop="2dp"/>
 
-            <androidx.appcompat.widget.AppCompatRadioButton
-                android:id="@+id/radiobutton3"
-                android:layout_width="340dp"
-                android:layout_height="49dp"
-                style="@style/login_button"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="35dp"
-                android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:textSize="16sp"
-                android:fontFamily="@font/kronaone_regular"
-                android:buttonTint="@color/grey"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_consultar"
+            android:text="@string/confirmaloc"
+            style="@style/login_button"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:fontFamily="@font/kronaone_regular"
+            android:layout_width="220dp"
+            android:layout_height="49dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"/>
 
-            <androidx.appcompat.widget.AppCompatRadioButton
-                android:id="@+id/radiobutton4"
-                android:layout_width="340dp"
-                android:layout_height="49dp"
-                style="@style/login_button"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="35dp"
-                android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:textSize="16sp"
-                android:fontFamily="@font/kronaone_regular"
-                android:buttonTint="@color/grey"/>
-
-            <androidx.appcompat.widget.AppCompatRadioButton
-                android:id="@+id/radiobutton5"
-                android:layout_width="340dp"
-                android:layout_height="49dp"
-                style="@style/login_button"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="35dp"
-                android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:textSize="16sp"
-                android:fontFamily="@font/kronaone_regular"
-                android:buttonTint="@color/grey"/>
-
-        </RadioGroup>
     </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
-        android:text="@string/avisoarmario"
-        android:textSize="12sp"
-        android:fontFamily="@font/jurabold"
-        android:textAlignment="center"
-        android:textColor="@color/dark_blue"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="0dp" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/marker_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:textColor="@color/dark_blue"
-        android:textSize="18sp"
-        android:fontFamily="@font/kronaone_regular"
-        android:layout_marginTop="2dp"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/marker_reference"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/dark_blue"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        android:fontFamily="@font/jurabold"
-        android:layout_marginTop="2dp"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/marker_disponibility"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/dark_blue"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        android:fontFamily="@font/jurabold"
-        android:layout_marginTop="2dp"/>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_consultar"
-        android:text="@string/confirmaloc"
-        style="@style/login_button"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:fontFamily="@font/kronaone_regular"
-        android:layout_width="250dp"
-        android:layout_height="49dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"/>
-
-</androidx.appcompat.widget.LinearLayoutCompat>
+</ScrollView>
