--- a/app/src/main/res/layout-small/activity_qr_code_screen.xml
+++ b/app/src/main/res/layout-small/activity_qr_code_screen.xml
@@ -47,13 +47,14 @@
 
     <TextView
         android:id="@+id/apresentation"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="55dp"
         android:textAlignment="center"
         android:fontFamily="@font/kronaone_regular"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textColor="@color/dark_blue"
-        android:layout_width="match_parent"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="65dp"
         android:text="@string/apresente_este_c_digo_ao_gerente">
     </TextView>
 
@@ -61,7 +62,7 @@
         android:id="@+id/qrCode"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="80dp"
         android:contentDescription="@string/qrcode_imagem"
         android:background="@drawable/qrcode"
         android:layout_marginTop="5dp"
@@ -74,7 +75,7 @@
         style="@style/login_button"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="75dp"
+        android:layout_marginStart="55dp"
         android:layout_marginTop="20dp"
         android:textSize="20sp"
         android:text="@string/cancelar_loc"
