--- a/app/src/main/res/layout/activity_qr_code_screen.xml
+++ b/app/src/main/res/layout/activity_qr_code_screen.xml
@@ -18,41 +18,42 @@
         />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="match_parent"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
         android:text="@string/qrcode"
         android:textAlignment="center"
         android:textColor="@color/grey_button"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:layout_marginTop="-65dp"
+        android:layout_marginStart="140dp"
         android:fontFamily="@font/kronaone_regular"
 
         />
 
+
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnVoltar"
-        style="style/button_voltar"
+        android:id="@+id/btn_voltar"
+        style="@style/button_voltar"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="-100dp"
-        android:contentDescription="@string/botão_voltar"
         android:drawableStart="@drawable/baseline_arrow_back_ios_new_24"
-        android:paddingStart="4dp"
-        android:paddingEnd="4dp" />
-
-
+        android:paddingStart="3dp"
+        android:paddingEnd="3dp"
+        tools:ignore="SpeakableTextPresentCheck"
+        android:layout_marginStart="40dp"/>
 
 
     <TextView
         android:id="@+id/apresentation"
         android:layout_marginTop="100dp"
+        android:layout_marginStart="70dp"
         android:textAlignment="center"
         android:fontFamily="@font/kronaone_regular"
         android:textSize="20sp"
         android:textColor="@color/dark_blue"
-        android:layout_width="match_parent"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:text="@string/apresente_este_c_digo_ao_gerente">
     </TextView>
